--- a/CRUD/my-app/package.json
+++ b/CRUD/my-app/package.json
@@ -30,5 +30,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/agielasyari1/dsc_unair/tree/master/CRUD/my-app"
+  },
+  "author": "agielasyari",
+  "license": "ISC"
 }
